# square_file_store

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-build-publish.yaml  pytest.yaml
square_file_store/: configuration.py  main.py  messages.py
square_file_store/data/: config.ini  config.sample.ini  config.testing.ini  config.testing.sample.ini
square_file_store/routes/: core.py
square_file_store/utils/: Helper.py  helper.py
square_file_store/utils/routes/: core.py
tests/: conftest.py  test_1.py  test_2.py  test_3.py  test_4.py
