[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_file_store"
version = "2.4.1"
description = "file storage layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_file_store" }
keywords = ["file", "storage", "fastapi", "utilities"]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "square_logger>=3.0.0",
    "square_database_helper>=2.7.1",
    "square_commons>=3.1.0",
    "square_database_structure>=2.5.1",
    "httpx>=0.27.2",
]
optional-dependencies = { all = [
    "pytest>=8.0.0", ], dev = ["pytest>=8.0.0",
] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI"
]

[tool.uv.build-backend]
module-name = "square_file_store"
module-root = ""
source-include = ["square_file_store/data/*"]